Fixed css again. Used dvh instead of vh for the header height so that it works on mobile devices.

--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ header {
   background-size: cover;
   padding: 0;
   /* height: calc(100vh - 50px); */
-  height: 100vh;
+  height: 100dvh; /* Dynamic Viewport Height */
   display: flex;
   flex-direction: column;
   align-items: center;
